// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`argument_comment.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================

query (
  $string: String, # Some variable comment
  $bool: Boolean # Some comment
 ) {
   someField
 }

=====================================output=====================================
query (
  $string: String # Some variable comment
  $bool: Boolean # Some comment
) {
  someField
}

================================================================================
`;

exports[`before-selection-set.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# https://github.com/prettier/prettier/issues/9112#issuecomment-673204742
{
  a # (b: C)
  {
    d
  }
}

{
  fieldWithOwnLineComment
  # note
  {
    d
  }
}

{
  fieldWithArguments(x: 1) # note
  {
    d
  }
}

query OperationBeforeSelectionSet # note
{
  t
}

{
  fieldWithDirective @dir # note
  {
    d
  }
}

query CommentAfterClosingParenthesis(
  $a: Int
) # note
{
  t
}

{
  inlineFragment {
    ... on Foo # note
    {
      d
    }
  }
}

=====================================output=====================================
# https://github.com/prettier/prettier/issues/9112#issuecomment-673204742
{
  a {
    # (b: C)
    d
  }
}

{
  fieldWithOwnLineComment {
    # note
    d
  }
}

{
  fieldWithArguments(x: 1) {
    # note
    d
  }
}

query OperationBeforeSelectionSet {
  # note
  t
}

{
  fieldWithDirective @dir {
    # note
    d
  }
}

query CommentAfterClosingParenthesis($a: Int) {
  # note
  t
}

{
  inlineFragment {
    ... on Foo {
      # note
      d
    }
  }
}

================================================================================
`;

exports[`dangling.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
query {
  search(filters: {
    # TODO
  }) {
      id
  }
}

query {
  a(x: [
    # only comment
  ])
}

=====================================output=====================================
query {
  search(
    filters: {
      # TODO
    }
  ) {
    id
  }
}

query {
  a(
    x: [
      # only comment
    ]
  )
}

================================================================================
`;

exports[`end-of-parenthesized-list.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# https://github.com/prettier/prettier/issues/9112
query Browse(
  $offset: Int
  $limit: Int
  $categories: [String!]
  $search: String
  # $foo: Int
  # $bar: Int
) {
  t
}

query OnlyComment(
  $a: Int
  # trailing
) {
  t
}

{
  field(
    a: 1
    # trailing argument comment
  ) {
    t
  }
}

{
  fieldWithoutSelectionSet(
    a: 1
    # trailing argument comment
  )
}

query CommentBetweenIsUnchanged(
  $a: Int
  # between
  $b: Int
) {
  t
}

=====================================output=====================================
# https://github.com/prettier/prettier/issues/9112
query Browse(
  $offset: Int
  $limit: Int
  $categories: [String!]
  $search: String
  # $foo: Int
  # $bar: Int
) {
  t
}

query OnlyComment(
  $a: Int
  # trailing
) {
  t
}

{
  field(
    a: 1
    # trailing argument comment
  ) {
    t
  }
}

{
  fieldWithoutSelectionSet(
    a: 1
    # trailing argument comment
  )
}

query CommentBetweenIsUnchanged(
  $a: Int
  # between
  $b: Int
) {
  t
}

================================================================================
`;

exports[`fields.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
query { 
  someField # Trailing comment
}



=====================================output=====================================
query {
  someField # Trailing comment
}

================================================================================
`;

exports[`interfaces.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type Type1
implements
A & B &
# comment 1
                 C & D &
# comment 2
 E {a: a}

=====================================output=====================================
type Type1 implements A &
  B &
  # comment 1
  C &
  D &
  # comment 2
  E {
  a: a
}

================================================================================
`;

exports[`tokens.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName($bookingReference: String!, $lastName: String!) {
  claimsByBookingReferenceAndLastName(bookingReference: $bookingReference, lastName: $lastName) {
    ... claim
  }
}

=====================================output=====================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName(
  $bookingReference: String!
  $lastName: String!
) {
  claimsByBookingReferenceAndLastName(
    bookingReference: $bookingReference
    lastName: $lastName
  ) {
    ...claim
  }
}

================================================================================
`;
